<resources>
    <string name="app_name">StretchAlyzer2</string>
    <string name="ForgotPassw"> <u>Forgot Password?</u></string>
    <string name="AlreadyAcc"> <u>Already have an account? Sign in!</u></string>
    <string name="set_time">Set time:</string>
    <string name="application_settings">Application Settings</string>
    <string name="set_notification">Set Notification</string>
    <string name="stop_exercise">Stop Exercise</string>
    <string name="count">Count:</string>
    <string name="pic2">pic2</string>
    <string name="pic1">pic1</string>
    <string name="start_now">STRETCH NOW !</string>
    <string name="log_out">Log out</string>
    <string name="set_date">Set Date</string>
    <string name="enddate">Select a End Date:</string>
    <string name="startdate">Select a Start Date:</string>
    <string name="show_graph">Show Graph</string>
    <string name="startdate2">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="_20_reps">20 Reps</string>
    <string name="hardware_device">Use Sensor data:</string>
    <string name="_00_00">00:00</string>
    <string name="sensordata">Sensordata :</string>
    <string name="sensor">Sensor: </string>
    <string name="device">Device: </string>
    <string name="exercise_screen">Exercise Screen</string>
    <string name="history_screen">History Screen</string>
    <string name="account_settings">Account Settings</string>
    <string name="set_time_counter">Set Time Counter</string>
</resources>
