<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/startdate2"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textviewBeginDate"
            android:hint="@string/startdate"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="OnClickStart"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textviewEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enddate"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="15sp"
            android:onClick="OnClickEnd"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textviewUP"
            android:text="UP:"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/rodepijl"
            android:scaleType="fitEnd" />

        <TextView
            android:id="@+id/txtUpProcent"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="4%"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textviewDown"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Down:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/rodepijl"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/txtDownProcent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="-3.7%"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
