<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.eaict.stretchalyzer2.HomeActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="100">


        //Icons

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12">

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="8dp"
                android:layout_toStartOf="@id/btnProfile"
                android:background="@drawable/graph"
                android:scaleType="fitCenter"
                android:onClick="onClickHistory"/>

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="8dp"
                android:layout_toStartOf="@id/btnSettings"
                android:background="@drawable/profile"
                android:scaleType="fitCenter"
                android:onClick="onClickAccount"/>

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/settings"
                android:scaleType="fitCenter"
                android:onClick="onClickSettings"/>
        </RelativeLayout>

        //Header

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnStart"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/whitebuttonwborder"
                android:text="@string/start_now"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>

        //Exercises

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnSelEx"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:maxLines="10"
                        android:text="Selected &#10; Exercise"
                        android:gravity="center"
                        android:background="@drawable/whitebuttonwborder"
                        android:onClick="onClickSelectedExercise"/>

                    <ImageView
                        android:contentDescription="@string/pic1"
                        android:id="@+id/imageView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/pic1"
                        android:scaleType="fitXY" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnNextEx"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:maxLines="10"
                        android:text="Next &#10; Exercise"
                        android:gravity="center"
                        android:background="@drawable/whitebuttonwborder"
                        android:onClick="onClickNextExercise"/>

                    <ImageView
                        android:contentDescription="@string/pic2"
                        android:id="@+id/imageView2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/pic2"
                        android:scaleType="fitXY"
                        />
                </LinearLayout>
            </LinearLayout>




        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
